--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-nav-bar></app-nav-bar>
-<app-property-card></app-property-card>
-<app-property-list></app-property-list>
+
+<div class="container" style="padding-top: 70px;">
+  <!-- <app-property-list></app-property-list> -->
+  <router-outlet></router-outlet>
+</div>
+
