--- a/frontend/src/app/property/property-card/property-card.component.css
+++ b/frontend/src/app/property/property-card/property-card.component.css
@@ -1,3 +1,49 @@
 h1 {
   font-weight: lighter;
 }
+
+input[type=button] {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.common-img-style {
+  height: 200px;
+  width: 300px;
+}
+
+.img-wrapper {
+  overflow: hidden;
+  position: relative;
+}
+
+.card:hover img {
+  transform: scale(1.2, 1.2);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+  opacity: .5;
+}
+
+.card img {
+  transform: scale(1, 1);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+}
+
+.member-icons {
+  position: absolute;
+  margin-left: 0;
+  margin-right: 0;
+  bottom: 50;
+  left: 0;
+  right: 0;
+}
+
+.img-wrapper:hover .member-icons {
+  bottom: 0;
+}
+
+
+.animate {
+  transition: all .3s ease-in-out;
+}
