--- a/frontend/src/app/user/user-register/user-register.component.html
+++ b/frontend/src/app/user/user-register/user-register.component.html
@@ -9,7 +9,7 @@
         <div class="form-group col-12">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" formControlName="userName">
-            <span *ngIf="!userName.valid && userName.touched" class="error-block">
+            <span *ngIf="!userName.valid && (userName.touched || isFormSubmitted) " class="error-block">
               Please provide name
             </span>
         </div>
@@ -17,7 +17,7 @@
         <div class="form-group col-12">
           <label for="email" class="form-label">Email</label>
           <input type="text" class="form-control" formControlName="email">
-          <span class="error-block" *ngIf="!email.valid && email.touched">
+          <span class="error-block" *ngIf="!email.valid && (email.touched || isFormSubmitted) ">
              <span *ngIf="email.hasError('required')">
                Please provide email
              </span>
@@ -30,7 +30,7 @@
         <div class="form-group col-12">
           <label for="passwrod" class="form-label">Password</label>
           <input type="text" class="form-control" formControlName="password">
-          <span *ngIf="!password.valid && password.touched" class="error-block">
+          <span *ngIf="!password.valid && (password.touched ||isFormSubmitted ) " class="error-block">
             <span *ngIf="password.errors['required']">
               Please provide password
             </span>
@@ -43,10 +43,10 @@
         <div class="form-group col-12">
           <label for="cpassword" class="form-label">Confirm Password</label>
           <input type="text" class="form-control" formControlName="confirmPassword">
-          <span class="error-block" *ngIf="!confirmPassword.valid && confirmPassword.touched">
+          <span class="error-block" *ngIf="!confirmPassword.valid && (confirmPassword.touched ||isFormSubmitted )">
             <span *ngIf="confirmPassword.hasError('required')">Please provide confirm password</span>
           </span>
-          <span class="error-block" *ngIf="confirmPassword.valid && confirmPassword.touched">
+          <span class="error-block" *ngIf="confirmPassword.valid && (confirmPassword.touched || isFormSubmitted)">
             <span *ngIf="registrationForm.hasError('notMatched')">Confirm password not matched</span>
           </span>
         </div>
@@ -54,6 +54,10 @@
         <div class="form-group col-12">
           <label for="mobile" class="form-label">Mobile</label>
           <input type="text" class="form-control" formControlName="mobile">
+          <span class="error-block" *ngIf="!mobile.valid && (mobile.touched || isFormSubmitted)">
+            <span *ngIf="mobile.hasError('required')">Please provide mobile number</span>
+            <span *ngIf="mobile.errors['maxLength']">Mobile number not more than 15 characters</span>
+          </span>
         </div>
 
         <div class="form-group col-12 mt-2">
