--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -18,12 +18,36 @@
     </ul>
     <div style="margin-left: auto;">
       <ul class="nav navbar-nav">
-        <li class="nav-item">
+        <li *ngIf="!loggedIn()" class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/user/register">Register</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!loggedIn()" class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/user/login">Login</a>
         </li>
+        <!-- <li *ngIf="loggedIn()" class="nav-item">
+          <a class="nav-link" (click)="onLogout()">Log out</a>
+        </li> -->
+
+        <div *ngIf="loggedIn()" class="dropdown" dropdown style="margin-right:45px;">
+            <a href="#" class="dropdown-toggle text-light" dropdownToggle (click)="false">
+                Welcome {{loggedInUserName}}
+            </a>
+            <div class="dropdown-menu" *dropdownMenu>
+                <a href="#" class="dropdown-item">
+                    <i class="fas fa-tachometer-alt"></i> View Dashboard
+                </a>
+                <a href="#" class="dropdown-item">
+                  <i class="fas fa-user-circle"></i> My Profile
+                </a>
+                <a href="#" class="dropdown-item">
+                  <i class="fas fa-key"></i> Change Password
+                </a>
+                <a (click)="onLogout()" class="dropdown-item">
+                  <i class="fas fa-sign-out-alt"></i> Logout
+                </a>
+            </div>
+        </div>
+
       </ul>
     </div>
 
