--- a/frontend/src/app/property/add-property/add-property.component.html
+++ b/frontend/src/app/property/add-property/add-property.component.html
@@ -1,30 +1,154 @@
 
 <div class="card">
   <div class="card-header">
-    Add New Property
+    List Your Property
   </div>
  <div class="card-body">
     <form (ngSubmit)="onSubmit()" #Form="ngForm">
-        <div class="form-group col-12">
-          <label for="name">Name </label>
-          <input type="text" class="form-control" #propName="ngModel" ngModel name="name" required minlength="5">
-          <span *ngIf="!propName.valid && propName.touched" class="error-block">
-            <span *ngIf="propName.hasError('required')"> Please provide name</span>
-            <span *ngIf="propName.hasError('minlength')">Name must be atleast 5 characters long</span>
-          </span>
-        </div>
-        <div class="form-group col-12">
-          <label for="type">Type </label>
-          <input type="text" class="form-control" ngModel name="type">
-        </div>
-        <div class="form-group col-12">
-          <label for="price">Price </label>
-          <input type="text" class="form-control" ngModel name="price">
-        </div>
-        <div class="form-group col-12 mt-2">
-          <button [disabled]="!Form.valid" type="submit" class="btn btn-primary" style="margin-right: 2px;">Save</button>
-          <button type="reset" class="btn btn-primary">Cancel</button>
-        </div>
+      <div>
+        <tabset #formTabs>
+          <tab heading="Basic Info">
+            <div class="form-group col-12">
+              <input type="radio" name="SellRent">
+              <label class="m-2">Sell</label>
+
+              <input type="radio" name="SellRent">
+              <label class="m-2">Rent</label>
+            </div>
+            <div class="form-group col-12">
+              <label for="name">Name </label>
+              <input type="text" class="form-control" #propName="ngModel" ngModel name="name" required minlength="5">
+              <span *ngIf="!propName.valid && propName.touched" class="error-block">
+                <span *ngIf="propName.hasError('required')"> Please provide name</span>
+                <span *ngIf="propName.hasError('minlength')">Name must be atleast 5 characters long</span>
+              </span>
+            </div>
+            <div class="form-group col-12">
+              <label for="type">Type </label>
+              <input type="text" class="form-control" ngModel name="type">
+            </div>
+            <div class="form-group col-12">
+              <label for="price">Price </label>
+              <input type="text" class="form-control" ngModel name="price">
+            </div>
+            <div class="form-group col-12 mt-2">
+              <button type="button" (click)="selectTab(1)" class="btn btn-primary btn-block commonStyle">Next</button>
+            </div>
+
+          </tab>
+          <tab heading="Pricing and Area">
+            <div class="form-group col-12">
+              <label>Price (in USD)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Security (in USD)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Maintenance (in USD)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Built Area (in Sqr Feet)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Carpet Area(in Sqr Feet)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <button type="button"  (click)="selectTab(0)" class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
+            <button type="button"  (click)="selectTab(2)" class="btn btn-primary btn-block commonStyle">Next</button>
+
+          </tab>
+          <tab heading="Address">
+            <div class="form-group col-12">
+              <label>Floor</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Total Floor</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Address</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Landmark</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <button type="button" (click)="selectTab(1)" class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
+            <button type="button" (click)="selectTab(3)" class="btn btn-primary btn-block  commonStyle">Next</button>
+
+          </tab>
+          <tab heading="Other Details">
+
+            <div class="form-group col-12">
+              <label>Ready to Move</label><br/>
+              <input type="radio" id='Yes' value='1' name="RTM">
+              <label class="m-2">Yes</label>
+
+              <input type="radio" id="No" value='2' name="RTM">
+              <label class="m-2">No</label>
+            </div>
+
+            <div class="form-group col-3">
+              <label>Possession/Avaialble From</label>
+              <input type="date" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Age of Property</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Gated Community</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Main Entrance</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Description</label>
+              <textarea type="text" class="form-control" rows="6"></textarea>
+            </div>
+
+
+            <button type="button" (click)="selectTab(2)" class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
+            <button type="button" (click)="selectTab(4)" class="btn btn-primary btn-block commonStyle">Next</button>
+          </tab>
+          <tab heading="Photos">Upload Photos
+            <div class="form-group col-12">
+              <div class="photo-control">
+                  <button class="mt-5" type="button">Upload</button> <br>
+                  This is under construction
+              </div>
+            </div>
+            <button type="button"  class="btn btn-primary btn-block mt-2 commonStyle"
+              (click)="selectTab(3)">Back</button>
+              <button type="reset"  class="btn btn-primary btn-block mt-2 commonStyle"
+              >Cancel</button>
+              <button type="submit"  class="btn btn-primary btn-block mt-2 commonStyle"
+              >Save
+            </button>
+          </tab>
+        </tabset>
+      </div>
+
     </form>
  </div>
 </div>
