property design and save to local storage

--- a/frontend/src/app/property/add-property/add-property.component.html
+++ b/frontend/src/app/property/add-property/add-property.component.html
@@ -1,154 +1,198 @@
-
-<div class="card">
-  <div class="card-header">
-    List Your Property
-  </div>
- <div class="card-body">
-    <form (ngSubmit)="onSubmit()" #Form="ngForm">
-      <div>
-        <tabset #formTabs>
-          <tab heading="Basic Info">
-            <div class="form-group col-12">
-              <input type="radio" name="SellRent">
-              <label class="m-2">Sell</label>
-
-              <input type="radio" name="SellRent">
-              <label class="m-2">Rent</label>
-            </div>
-            <div class="form-group col-12">
-              <label for="name">Name </label>
-              <input type="text" class="form-control" #propName="ngModel" ngModel name="name" required minlength="5">
-              <span *ngIf="!propName.valid && propName.touched" class="error-block">
-                <span *ngIf="propName.hasError('required')"> Please provide name</span>
-                <span *ngIf="propName.hasError('minlength')">Name must be atleast 5 characters long</span>
-              </span>
-            </div>
-            <div class="form-group col-12">
-              <label for="type">Type </label>
-              <input type="text" class="form-control" ngModel name="type">
-            </div>
-            <div class="form-group col-12">
-              <label for="price">Price </label>
-              <input type="text" class="form-control" ngModel name="price">
-            </div>
-            <div class="form-group col-12 mt-2">
-              <button type="button" (click)="selectTab(1)" class="btn btn-primary btn-block commonStyle">Next</button>
-            </div>
-
-          </tab>
-          <tab heading="Pricing and Area">
-            <div class="form-group col-12">
-              <label>Price (in USD)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Security (in USD)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Maintenance (in USD)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Built Area (in Sqr Feet)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Carpet Area(in Sqr Feet)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <button type="button"  (click)="selectTab(0)" class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
-            <button type="button"  (click)="selectTab(2)" class="btn btn-primary btn-block commonStyle">Next</button>
-
-          </tab>
-          <tab heading="Address">
-            <div class="form-group col-12">
-              <label>Floor</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Total Floor</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Address</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Landmark</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <button type="button" (click)="selectTab(1)" class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
-            <button type="button" (click)="selectTab(3)" class="btn btn-primary btn-block  commonStyle">Next</button>
-
-          </tab>
-          <tab heading="Other Details">
-
-            <div class="form-group col-12">
-              <label>Ready to Move</label><br/>
-              <input type="radio" id='Yes' value='1' name="RTM">
-              <label class="m-2">Yes</label>
-
-              <input type="radio" id="No" value='2' name="RTM">
-              <label class="m-2">No</label>
-            </div>
-
-            <div class="form-group col-3">
-              <label>Possession/Avaialble From</label>
-              <input type="date" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Age of Property</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Gated Community</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Main Entrance</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Description</label>
-              <textarea type="text" class="form-control" rows="6"></textarea>
-            </div>
-
-
-            <button type="button" (click)="selectTab(2)" class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
-            <button type="button" (click)="selectTab(4)" class="btn btn-primary btn-block commonStyle">Next</button>
-          </tab>
-          <tab heading="Photos">Upload Photos
-            <div class="form-group col-12">
-              <div class="photo-control">
-                  <button class="mt-5" type="button">Upload</button> <br>
-                  This is under construction
-              </div>
-            </div>
-            <button type="button"  class="btn btn-primary btn-block mt-2 commonStyle"
-              (click)="selectTab(3)">Back</button>
-              <button type="reset"  class="btn btn-primary btn-block mt-2 commonStyle"
-              >Cancel</button>
-              <button type="submit"  class="btn btn-primary btn-block mt-2 commonStyle"
-              >Save
-            </button>
-          </tab>
-        </tabset>
+<div class="row mb-5">
+  <div class="col-8 shadow-lg p-0 bg-white">
+    <div class="card">
+      <div class="card-header">
+        <h3>List Your Property </h3>
       </div>
+      <div class="card-body">
+        <form (ngSubmit)="onSubmit()" [formGroup]="addPropertyForm">
+          <div class="tab-panel">
+            <tabset class="member-tabset" #formTabs>
+              <tab heading="Basic Info" formGroupName="BasicInfo">
+                <div class="form-group col-12">
+                  <p>I want to</p>
+                  <div class="btn-group" btnRadioGroup formControlName="sellrent">
+                    <label class="btn btn-outline-primary mr-2" btnRadio=1 role="button" tabindex="0"
+                      name="sellrent">Sell</label>
+                    <label class="btn btn-outline-primary" style="margin-left: 5px;" btnRadio=2 role="button"
+                      tabindex="0" name="sellrent">Rent</label>
+                  </div>
+                </div>
 
-    </form>
- </div>
+                <div class="form-group col-12">
+                  <p>BHK</p>
+                  <div class="btn-group" btnRadioGroup [(ngModel)]="propertyView.bhk" name="bhk" [ngModelOptions]="{standalone:true}">
+                    <label *ngFor="let bhk of [1,2,3,4,5]" class="btn btn-outline-primary m-1" [btnRadio]="$any(bhk)"
+                      tabindex="0" role="button" name="bhk">{{bhk}}</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Property Type</p>
+                  <div class="btn-group" btnRadioGroup formControlName='ptype' [(ngModel)]="propertyView.ptype">
+                    <label *ngFor="let ptype of propertyTypes" class="btn btn-outline-primary mr-2" [btnRadio]="ptype"
+                      tabindex="0" role="button" name="ptype">{{ptype}} </label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Furnishing Type</p>
+                  <div class="btn-group" btnRadioGroup name='ftype' [(ngModel)]="propertyView.ftype" [ngModelOptions]="{standalone:true}">
+                    <label *ngFor="let ftype of furnishTypes" class="btn btn-outline-primary mr-2" [btnRadio]="ftype"
+                      tabindex="0" role="button" name="ftype">{{ftype}}</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label for="name">In Building/Society/Project </label>
+                  <input type="text" class="form-control" #propName="ngModel" ngModel name="name"
+                    [(ngModel)]="propertyView.name" required minlength="5"  [ngModelOptions]="{standalone:true}">
+                  <span *ngIf="!propName.valid && propName.touched" class="error-block">
+                    <span *ngIf="propName.hasError('required')"> Please provide name</span>
+                    <span *ngIf="propName.hasError('minlength')">Name must be atleast 5 characters long</span>
+                  </span>
+                </div>
+                <div class="form-group col-12">
+                  <label for="type">City </label>
+                  <input type="text" class="form-control" [(ngModel)]="propertyView.city" name="city" [ngModelOptions]="{standalone:true}">
+                </div>
+                <!-- <div class="form-group col-12">
+                  <label for="price">Price </label>
+                  <input type="text" class="form-control" ngModel name="price">
+                </div> -->
+                <div class="form-group col-12 mt-2">
+                  <button type="button"  (click)="selectTab(1)"
+                    class="btn btn-primary btn-block commonStyle">Next</button>
+                </div>
+
+              </tab>
+              <tab heading="Pricing and Area" formGroupName="PriceInfo">
+                <div class="form-group col-12">
+                  <label>Price (in USD)</label>
+                  <input type="text" class="form-control" formControlName="price" name="price" [(ngModel)]="propertyView.price">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Security (in USD)</label>
+                  <input type="text"  formControlName="security" class="form-control" >
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Maintenance (in USD)</label>
+                  <input type="text"  formControlName="maintenance" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Built Area (in Sqr Feet)</label>
+                  <input type="text" class="form-control" name="builtarea"
+                  [(ngModel)]="propertyView.builtarea" formControlName="BuiltArea">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Carpet Area(in Sqr Feet)</label>
+                  <input type="text" formControlName="carpetarea" class="form-control">
+                </div>
+
+                <button type="button" (click)="selectTab(0)"
+                  class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
+                <button type="button" (click)="selectTab(2)" class="btn btn-primary btn-block commonStyle">Next</button>
+
+              </tab>
+              <tab heading="Address" formGroupName="AddressInfo">
+                <div class="form-group col-12">
+                  <label>Floor</label>
+                  <input type="text" formControlName="floorno" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Total Floor</label>
+                  <input type="text"  formControlName="totalfloor" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Address</label>
+                  <input type="text"  formControlName="address" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Landmark</label>
+                  <input type="text"  formControlName="landmark" class="form-control">
+                </div>
+
+                <button type="button" (click)="selectTab(1)"
+                  class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
+                <button type="button" (click)="selectTab(3)"
+                  class="btn btn-primary btn-block  commonStyle">Next</button>
+
+              </tab>
+              <tab heading="Other Details" formGroupName="OtherInfo">
+
+                <div class="form-group col-12">
+                  <label>Ready to Move</label><br />
+                  <input type="radio" id='Yes' value='1' name="RTM">
+                  <label class="m-2">Yes</label>
+
+                  <input type="radio" id="No" value='2' name="RTM">
+                  <label class="m-2">No</label>
+                </div>
+
+                <div class="form-group col-3">
+                  <label>Possession/Avaialble From</label>
+                  <input type="text" placeholder="Datepicker" class="form-control" bsDatepicker
+                    [bsConfig]=" { containerClass: 'theme-dark-blue', dateInputFormat: 'DD-MM-YYYY'}">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Age of Property</label>
+                  <input type="text" formControlName="aop" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Gated Community</label>
+                  <input type="text"  formControlName="gated" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Main Entrance</label>
+                  <input type="text" formControlName="mainentrance" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Description</label>
+                  <textarea type="text" formControlName="description" class="form-control" rows="6"></textarea>
+                </div>
+
+
+                <button type="button" (click)="selectTab(2)"
+                  class="btn btn-primary btn-block mb-2 mt-2 commonStyle">Back</button>
+                <button type="button" (click)="selectTab(4)" class="btn btn-primary btn-block commonStyle">Next</button>
+              </tab>
+              <tab heading="Photos">Upload Photos
+                <div class="form-group col-12">
+                  <div class="photo-control">
+                    <button class="mt-5" type="button">Upload</button> <br>
+                    This is under construction
+                  </div>
+                </div>
+                <button type="button" class="btn btn-primary btn-block mt-2 commonStyle"
+                  (click)="selectTab(3)">Back</button>
+                <button type="reset" class="btn btn-primary btn-block mt-2 commonStyle">Cancel</button>
+                <button type="submit" class="btn btn-primary btn-block mt-2 commonStyle">Save
+                </button>
+              </tab>
+            </tabset>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="card-header">
+      <h3>Your Property Preview</h3>
+    </div>
+    <div class="shadow-lg p-3 bg-white">
+      <app-property-card [property]="$any(propertyView)" [isHideIcon]="true"></app-property-card>
+    </div>
+  </div>
 </div>
