--- a/frontend/src/app/property/add-property/add-property.component.html
+++ b/frontend/src/app/property/add-property/add-property.component.html
@@ -54,7 +54,13 @@
                 </div>
                 <div class="form-group col-12">
                   <label for="type">City </label>
-                  <input type="text" class="form-control" [(ngModel)]="propertyView.city" name="city" [ngModelOptions]="{standalone:true}">
+                  <!-- <input type="text" class="form-control" [(ngModel)]="propertyView.city" name="city" [ngModelOptions]="{standalone:true}"> -->
+                  <select class="form-control" [(ngModel)]="propertyView.city" name="city" formControlName="city">
+                    <option value="">--Select City--</option>
+                      <option *ngFor="let city of cityList" value="{{city.id}}">{{city.name}}
+                      </option>
+                  </select>
+
                 </div>
                 <!-- <div class="form-group col-12">
                   <label for="price">Price </label>
@@ -85,7 +91,7 @@
                 <div class="form-group col-12">
                   <label>Built Area (in Sqr Feet)</label>
                   <input type="text" class="form-control" name="builtarea"
-                  [(ngModel)]="propertyView.builtarea" formControlName="BuiltArea">
+                  [(ngModel)]="propertyView.builtarea" formControlName="builtarea">
                 </div>
 
                 <div class="form-group col-12">
